[tool.poetry]
name = "xtquant-doc"
version = "0.1.0"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"
packages = [{include = "xtquant_doc"}]

[tool.poetry.dependencies]
python = "^3.10"
pdoc = "^14.0.0"
pandas = "^2.0.3"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
